Starting to work on call backs stuff

--- a/nbs/dl2/02_CNN_From_Scratch.ipynb
+++ b/nbs/dl2/02_CNN_From_Scratch.ipynb
@@ -1433,7 +1433,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "pytorch_fastai",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
