--- a/nbs/dl2/03_MINI_BATCH_FROM_SCRATCH.ipynb
+++ b/nbs/dl2/03_MINI_BATCH_FROM_SCRATCH.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 287,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 288,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1328,7 +1328,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 410,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1338,10 +1338,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 411,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'torch' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-6-0617552f3544>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;31m#export\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m \u001b[0;32mclass\u001b[0m \u001b[0mSelfLearningLibraryModel\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtorch\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mnn\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mModule\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      3\u001b[0m     \u001b[0;32mdef\u001b[0m \u001b[0m__init__\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0minputSize\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mnumberHiddenLayers\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mclasses\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mlearningRate\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m         \u001b[0msuper\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m__init__\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m         self.layers = torch.nn.Sequential(\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'torch' is not defined"
+     ]
+    }
+   ],
    "source": [
+    "#export\n",
     "class SelfLearningLibraryModel(torch.nn.Module): \n",
     "    def __init__(self, inputSize, numberHiddenLayers, classes, learningRate):\n",
     "        super().__init__()\n",
@@ -1732,10 +1745,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 599,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
+    "#export\n",
     "def collateTuple(tupl):\n",
     "    xColumn, yColumn = zip(*tupl)\n",
     "    return torch.stack(xColumn), torch.stack(yColumn)"
@@ -2186,17 +2200,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 663,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Traceback (most recent call last):\n",
-      "  File \"notebook2script.py\", line 3, in <module>\n",
-      "    import json,fire,re\n",
-      "ModuleNotFoundError: No module named 'fire'\n"
+      "Collecting fire\n",
+      "Requirement already satisfied: six in /Users/taks2/anaconda3/lib/python3.7/site-packages (from fire) (1.12.0)\n",
+      "Installing collected packages: fire\n",
+      "Successfully installed fire-0.1.3\n"
+     ]
+    }
+   ],
+   "source": [
+    "#!pip install fire"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Converted 03_MINI_BATCH_FROM_SCRATCH.ipynb to exp/nb_03.py\r\n"
      ]
     }
    ],
