--- a/nbs/dl2/04_callbacks.ipynb
+++ b/nbs/dl2/04_callbacks.ipynb
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -775,9 +775,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Converted 04_callbacks.ipynb to exp/nb_04.py\r\n"
+     ]
+    }
+   ],
    "source": [
     "!python notebook2script.py 04_callbacks.ipynb"
    ]
