--- a/nbs/dl2/04_callbacks.ipynb
+++ b/nbs/dl2/04_callbacks.ipynb
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -27,13 +27,6 @@
    "metadata": {},
    "source": [
     "## DataBunch/Learner"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "[Jump_to lesson 9 video](https://course.fast.ai/videos/?lesson=9&t=4799)"
    ]
   },
   {
@@ -62,13 +55,6 @@
     "`fit(1, learn)`\n",
     "\n",
     "This will allow us to tweak what's happening inside the training loop in other places of the code because the `Learner` object will be mutable, so changing any of its attribute elsewhere will be seen in our training loop."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "[Jump_to lesson 9 video](https://course.fast.ai/videos/?lesson=9&t=5363)"
    ]
   },
   {
@@ -160,7 +146,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0 tensor(0.2194) tensor(0.9372)\n"
+      "0 tensor(0.1830) tensor(0.9452)\n"
      ]
     }
    ],
@@ -200,13 +186,6 @@
    "metadata": {},
    "source": [
     "Add callbacks so we can remove complexity from loop, and make it flexible:"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "[Jump_to lesson 9 video](https://course.fast.ai/videos/?lesson=9&t=5628)"
    ]
   },
   {
@@ -278,7 +257,7 @@
     "\n",
     "    def begin_fit(self, learn):\n",
     "        self.learn,self.in_train = learn,True\n",
-    "        learn.stop = False\n",
+    "        self.learn.stop = False\n",
     "        res = True\n",
     "        for cb in self.cbs: res = res and cb.begin_fit(learn)\n",
     "        return res\n",
@@ -392,13 +371,6 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "[Jump_to lesson 9 video](https://course.fast.ai/videos/?lesson=9&t=5811)"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -461,7 +433,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We'll also re-create our TestCallback"
+    "We'll also re-create our TestCallback - but note this doesn't actually work right yet (can you see why?) We'll fix it in notebook 05b."
    ]
   },
   {
@@ -470,9 +442,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Not working!\n",
     "class TestCallback(Callback):\n",
+    "    _order=1\n",
     "    def after_step(self):\n",
-    "        if self.train_eval.n_iters>=10: return True"
+    "        if self.n_iter>=10: return True"
    ]
   },
   {
@@ -580,7 +554,7 @@
     "        self.stop=False\n",
     "\n",
     "    def fit(self, epochs, learn):\n",
-    "        self.epochs,self.learn = epochs,learn\n",
+    "        self.epochs,self.learn,self.loss = epochs,learn,tensor(0.)\n",
     "\n",
     "        try:\n",
     "            for cb in self.cbs: cb.set_runner(self)\n",
@@ -686,10 +660,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "train: [0.31116248046875, tensor(0.9052)]\n",
-      "valid: [0.141587158203125, tensor(0.9587)]\n",
-      "train: [0.144049990234375, tensor(0.9572)]\n",
-      "valid: [0.2177901611328125, tensor(0.9354)]\n"
+      "train: [0.31685572265625, tensor(0.9033)]\n",
+      "valid: [0.15482904052734375, tensor(0.9553)]\n",
+      "train: [0.143599248046875, tensor(0.9567)]\n",
+      "valid: [0.116745849609375, tensor(0.9652)]\n"
      ]
     }
    ],
@@ -705,7 +679,7 @@
     {
      "data": {
       "text/plain": [
-       "(0.2177901611328125, tensor(0.9354))"
+       "(0.116745849609375, tensor(0.9652))"
       ]
      },
      "execution_count": null,
@@ -756,8 +730,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "train: [0.109901865234375, tensor(0.9663)]\n",
-      "valid: [0.12098992919921875, tensor(0.9649)]\n"
+      "train: [0.108607373046875, tensor(0.9666)]\n",
+      "valid: [0.131622998046875, tensor(0.9607)]\n"
      ]
     }
    ],
@@ -780,7 +754,7 @@
     {
      "data": {
       "text/plain": [
-       "[0.12098992919921875, tensor(0.9649)]"
+       "[0.131622998046875, tensor(0.9607)]"
       ]
      },
      "execution_count": null,
@@ -801,14 +775,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Converted 04_callbacks.ipynb to nb_04.py\r\n"
+      "Converted 04_callbacks.ipynb to exp/nb_04.py\r\n"
      ]
     }
    ],
