--- a/nbs/dl2/05_anneal.ipynb
+++ b/nbs/dl2/05_anneal.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -196,7 +196,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -221,13 +221,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
     "#export\n",
     "def annealer(f):\n",
-    "    def _inner(start, end): return partial(f, start, end)\n",
+    "    def _inner(start): return partial(f, start)\n",
     "    return _inner\n",
     "\n",
     "@annealer\n",
@@ -246,7 +246,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -255,14 +255,34 @@
        "1.3"
       ]
      },
-     "execution_count": null,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "f = sched_lin(1,2)\n",
-    "f(0.3)"
+    "f = sched_lin(1)\n",
+    "f(2, 0.3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "5.3"
+      ]
+     },
+     "execution_count": 35,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "f(2,4.3)"
    ]
   },
   {
@@ -274,7 +294,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -299,7 +319,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
@@ -323,9 +343,9 @@
     "\n",
     "fns = [sched_no, sched_lin, sched_cos, sched_exp]\n",
     "for fn, t in zip(fns, annealings):\n",
-    "    f = fn(2, 1e-2)\n",
-    "    plt.plot(a, [f(o) for o in p], label=t)\n",
-    "plt.legend();"
+    "    f = fn(2)\n",
+    "    plotter.plot(a, [f(1e-2, o) for o in p], label=t)\n",
+    "plotter.legend();"
    ]
   },
   {
@@ -540,6 +560,18 @@
    "display_name": "Python 3",
    "language": "python",
    "name": "python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
