--- a/nbs/dl2/04_HOLLA_BACK_GURL.ipynb
+++ b/nbs/dl2/04_HOLLA_BACK_GURL.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 117,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 118,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 119,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 120,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -47,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 121,
    "metadata": {},
    "outputs": [
     {
@@ -56,7 +56,7 @@
        "((tensor(1.), tensor(-7.6999e-06)), (tensor(1.0000), tensor(-7.0751e-08)))"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 121,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -67,7 +67,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 122,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -77,7 +77,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 123,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -86,7 +86,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 124,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -95,7 +95,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 125,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -104,7 +104,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 126,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -113,7 +113,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 127,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -122,7 +122,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 128,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -140,7 +140,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 129,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -150,7 +150,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 130,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -159,7 +159,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 114,
+   "execution_count": 131,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -183,16 +183,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 132,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "tensor(0.0786)"
+       "tensor(0.0893)"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 132,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -203,22 +203,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 133,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch 0, Accuracy 0.33469998836517334, Loss 1.814199447631836\n",
-      "Epoch 1, Accuracy 0.6765000224113464, Loss 0.9899466037750244\n",
-      "Epoch 2, Accuracy 0.8217999935150146, Loss 0.5179767608642578\n",
-      "Epoch 3, Accuracy 0.8913999795913696, Loss 0.3701602816581726\n",
-      "Epoch 4, Accuracy 0.8654000163078308, Loss 0.39331528544425964\n",
-      "Epoch 5, Accuracy 0.9200000166893005, Loss 0.27125871181488037\n",
-      "Epoch 6, Accuracy 0.9254000186920166, Loss 0.25498273968696594\n",
-      "Epoch 7, Accuracy 0.9241999983787537, Loss 0.24994486570358276\n",
-      "Epoch 8, Accuracy 0.9312000274658203, Loss 0.22827160358428955\n"
+      "Epoch 0, Accuracy 0.4959999918937683, Loss 1.2575938701629639\n",
+      "Epoch 1, Accuracy 0.5776000022888184, Loss 1.8194020986557007\n",
+      "Epoch 2, Accuracy 0.6467000246047974, Loss 1.2795933485031128\n",
+      "Epoch 3, Accuracy 0.8259999752044678, Loss 0.512549102306366\n",
+      "Epoch 4, Accuracy 0.8981999754905701, Loss 0.34089431166648865\n",
+      "Epoch 5, Accuracy 0.9060999751091003, Loss 0.2967222332954407\n",
+      "Epoch 6, Accuracy 0.91839998960495, Loss 0.2649284899234772\n",
+      "Epoch 7, Accuracy 0.9243999719619751, Loss 0.25057950615882874\n",
+      "Epoch 8, Accuracy 0.9247000217437744, Loss 0.2457549124956131\n"
      ]
     }
    ],
@@ -228,16 +228,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 134,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "tensor(0.9312)"
+       "tensor(0.9247)"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 134,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -257,170 +257,217 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 115,
+   "execution_count": 152,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#export\n",
+    "class CNNModel(torch.nn.Module): \n",
+    "    def __init__(self, inputSize, numberHiddenLayers, classes):\n",
+    "        super().__init__()\n",
+    "        self.layers = torch.nn.Sequential(\n",
+    "            torch.nn.Linear(inputSize, numberHiddenLayers),\n",
+    "            torch.nn.ReLU(),\n",
+    "            torch.nn.Linear(numberHiddenLayers, classes)\n",
+    "        )\n",
+    "        \n",
+    "    def __call__(self, inputMatrix): return self.layers(inputMatrix)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 153,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "CNNModel(\n",
+       "  (layers): Sequential(\n",
+       "    (0): Linear(in_features=7, out_features=2, bias=True)\n",
+       "    (1): ReLU()\n",
+       "    (2): Linear(in_features=2, out_features=2, bias=True)\n",
+       "  )\n",
+       ")"
+      ]
+     },
+     "execution_count": 153,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "CNNModel(7,2,2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 221,
    "metadata": {},
    "outputs": [],
    "source": [
     "class Teacher():\n",
     "    \n",
-    "    def __init__(self, lossFunction, accuracyFunction):\n",
+    "    def __init__(self, \n",
+    "                 lossFunction=Functional.cross_entropy, \n",
+    "                 accuracyFunction=accuracy\n",
+    "                ):\n",
     "        self.lossFunction = lossFunction\n",
     "        self.accuracyFunction = accuracyFunction\n",
     "        \n",
-    "    def teachModel(self, selfLearningModel, dataBunch, numberOfEpochs):\n",
+    "    def teachModel(self, cnnModel, dataBunch, learningRate, numberOfEpochs):\n",
+    "        self.optimizer = optim.SGD(cnnModel.parameters(), learningRate)\n",
     "        for epoch in range(numberOfEpochs):\n",
-    "            trainingLoss, trainingAccuracy = self._trainModel(selfLearningModel, dataBunch.trainingDataLoader)\n",
-    "            validationLoss, validationAccuracy = self._validateModel(selfLearningModel, dataBunch.validationDataLoader)\n",
+    "            trainingLoss, trainingAccuracy = self._trainModel(cnnModel, dataBunch.trainingDataLoader)\n",
     "            print(\"Epoch #{} Training: Loss {} Accuracy {}\".format(epoch, trainingLoss, trainingAccuracy))\n",
+    "            \n",
+    "            validationLoss, validationAccuracy = self._validateModel(cnnModel, dataBunch.validationDataLoader)\n",
     "            print(\"Epoch #{} Validation: Loss {} Accuracy {}\".format(epoch, validationLoss, validationAccuracy))\n",
     "            print(\"\")\n",
-    "    \n",
-    "    def _proccessDataSet(self, selfLearningModel, dataLoader, isTeaching=False):\n",
-    "        for _xDataSet, _yDataSet in dataLoader:\n",
-    "            _predictions = selfLearningModel(_xDataSet)\n",
-    "            loss = self.lossFunction(_predictions, _yDataSet)\n",
     "            \n",
-    "            if(isTeaching):\n",
-    "                loss.backward()\n",
-    "                selfLearningModel.learn()\n",
+    "    def _trainModel(self, cnnModel, trainingDataSet):\n",
+    "        def _teachModel(loss):\n",
+    "            loss.backward()\n",
+    "            self.optimizer.step()\n",
+    "            self.optimizer.zero_grad()\n",
     "            \n",
-    "            return loss, self.accuracyFunction(_predictions, _yDataSet)\n",
-    "            \n",
-    "    def _trainModel(self, selfLearningModel, trainingDataSet):\n",
-    "        returnItems = self._proccessDataSet(selfLearningModel, trainingDataSet, True)\n",
+    "        returnItems = self._proccessDataSet(cnnModel, trainingDataSet, _teachModel)\n",
     "        return returnItems\n",
     "        \n",
-    "    def _validateModel(self, selfLearningModel, validationDataSet):\n",
+    "    def _validateModel(self, cnnModel, validationDataSet):\n",
     "        with torch.no_grad():\n",
-    "            returnItems = self._proccessDataSet(selfLearningModel, validationDataSet)\n",
-    "        return returnItems"
+    "            returnItems = self._proccessDataSet(cnnModel, validationDataSet)\n",
+    "        return returnItems\n",
+    "    \n",
+    "    def _proccessDataSet(self, \n",
+    "                         cnnModel, \n",
+    "                         dataLoader, \n",
+    "                         postEvaluation=lambda loss: None):\n",
+    "        accumulatedLoss, accumulatedAccuracy = 0.,0.\n",
+    "        for _xDataSet, _yDataSet in dataLoader:\n",
+    "            _predictions = cnnModel(_xDataSet)\n",
+    "            loss = self.lossFunction(_predictions, _yDataSet)\n",
+    "            postEvaluation(loss)\n",
+    "            accumulatedLoss+= loss\n",
+    "            accumulatedAccuracy += self.accuracyFunction(_predictions, _yDataSet)\n",
+    "        numberOfBatches = len(dataLoader)\n",
+    "        return accumulatedLoss/numberOfBatches, accumulatedAccuracy/numberOfBatches\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 110,
+   "execution_count": 222,
    "metadata": {},
    "outputs": [],
    "source": [
-    "teacher = Teacher(Functional.cross_entropy, accuracy)"
+    "teacher = Teacher()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 111,
+   "execution_count": 223,
    "metadata": {},
    "outputs": [],
    "source": [
-    "_newSelfLearningModel = SelfLearningLibraryModel(trainingColumns, hiddenLayerOutput,numberOfClasses,learningRate)"
+    "cnnModel = CNNModel(trainingColumns, hiddenLayerOutput,numberOfClasses)\n",
+    "selfLearndingModel = SelfLearningLibraryModel(trainingColumns, hiddenLayerOutput,numberOfClasses,0.5)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 112,
+   "execution_count": 224,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch #0 Training: Loss 2.334801435470581 Accuracy 0.05820000171661377\n",
-      "Epoch #0 Validation: Loss 1.8325834274291992 Accuracy 0.45329999923706055\n",
+      "Epoch #0 Training: Loss 1.974439263343811 Accuracy 0.3993000090122223\n",
+      "Epoch #0 Validation: Loss 1.2277991771697998 Accuracy 0.5770000219345093\n",
       "\n",
-      "Epoch #1 Training: Loss 1.8481521606445312 Accuracy 0.42739999294281006\n",
-      "Epoch #1 Validation: Loss 1.6057158708572388 Accuracy 0.4884999990463257\n",
+      "Epoch #1 Training: Loss 1.1788398027420044 Accuracy 0.6037400364875793\n",
+      "Epoch #1 Validation: Loss 1.004588007926941 Accuracy 0.6527000069618225\n",
       "\n",
-      "Epoch #2 Training: Loss 1.619502305984497 Accuracy 0.47859999537467957\n",
-      "Epoch #2 Validation: Loss 2.037757396697998 Accuracy 0.4733999967575073\n",
+      "Epoch #2 Training: Loss 0.6883408427238464 Accuracy 0.771340012550354\n",
+      "Epoch #2 Validation: Loss 0.5314133763313293 Accuracy 0.8228999972343445\n",
       "\n",
-      "Epoch #3 Training: Loss 2.0454702377319336 Accuracy 0.4803999960422516\n",
-      "Epoch #3 Validation: Loss 1.472883939743042 Accuracy 0.5480999946594238\n",
+      "Epoch #3 Training: Loss 0.477916955947876 Accuracy 0.83760005235672\n",
+      "Epoch #3 Validation: Loss 0.32999297976493835 Accuracy 0.8967999815940857\n",
       "\n",
-      "Epoch #4 Training: Loss 1.5267990827560425 Accuracy 0.5311999917030334\n",
-      "Epoch #4 Validation: Loss 1.3862677812576294 Accuracy 0.5084999799728394\n",
+      "Epoch #4 Training: Loss 0.3720850944519043 Accuracy 0.8812600374221802\n",
+      "Epoch #4 Validation: Loss 0.2776019275188446 Accuracy 0.9178000092506409\n",
       "\n",
-      "Epoch #5 Training: Loss 1.4516279697418213 Accuracy 0.4860000014305115\n",
-      "Epoch #5 Validation: Loss 1.3181079626083374 Accuracy 0.578000009059906\n",
+      "Epoch #5 Training: Loss 0.29000285267829895 Accuracy 0.9121400713920593\n",
+      "Epoch #5 Validation: Loss 0.2502813935279846 Accuracy 0.9240999817848206\n",
       "\n",
-      "Epoch #6 Training: Loss 1.3737976551055908 Accuracy 0.550000011920929\n",
-      "Epoch #6 Validation: Loss 1.634998083114624 Accuracy 0.4932999908924103\n",
+      "Epoch #6 Training: Loss 0.27402135729789734 Accuracy 0.9174400568008423\n",
+      "Epoch #6 Validation: Loss 0.2853277325630188 Accuracy 0.9115999937057495\n",
       "\n",
-      "Epoch #7 Training: Loss 1.690491795539856 Accuracy 0.4848000109195709\n",
-      "Epoch #7 Validation: Loss 1.7990601062774658 Accuracy 0.48649999499320984\n",
+      "Epoch #7 Training: Loss 0.27827566862106323 Accuracy 0.915160059928894\n",
+      "Epoch #7 Validation: Loss 0.22485679388046265 Accuracy 0.9329000115394592\n",
+      "\n",
+      "Epoch #8 Training: Loss 0.24637222290039062 Accuracy 0.9252400398254395\n",
+      "Epoch #8 Validation: Loss 0.24843162298202515 Accuracy 0.9193999767303467\n",
+      "\n",
+      "Epoch #9 Training: Loss 0.23892247676849365 Accuracy 0.9264200329780579\n",
+      "Epoch #9 Validation: Loss 0.19897504150867462 Accuracy 0.942799985408783\n",
       "\n"
      ]
     }
    ],
    "source": [
-    "teacher.teachModel(_newSelfLearningModel, imageDataBunch, 8)"
+    "teacher.teachModel(cnnModel, imageDataBunch, 0.5, 10)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 113,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "tensor(0.4865)"
-      ]
-     },
-     "execution_count": 113,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "accuracy(_newSelfLearningModel(xValidationNormalized), yValidation)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 225,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch 0, Accuracy 0.6759999990463257, Loss 0.8778393268585205\n",
-      "Epoch 1, Accuracy 0.8406999707221985, Loss 0.5532947182655334\n",
-      "Epoch 2, Accuracy 0.8866999745368958, Loss 0.3865782916545868\n",
-      "Epoch 3, Accuracy 0.9093000292778015, Loss 0.3086942732334137\n",
-      "Epoch 4, Accuracy 0.9115999937057495, Loss 0.2992865741252899\n",
-      "Epoch 5, Accuracy 0.9258999824523926, Loss 0.2472270280122757\n",
-      "Epoch 6, Accuracy 0.9190000295639038, Loss 0.2661859393119812\n",
-      "Epoch 7, Accuracy 0.9337999820709229, Loss 0.22734184563159943\n"
+      "Epoch 0, Accuracy 0.4961000084877014, Loss 1.356858491897583\n",
+      "Epoch 1, Accuracy 0.728600025177002, Loss 0.7562280893325806\n",
+      "Epoch 2, Accuracy 0.8295999765396118, Loss 0.48906758427619934\n",
+      "Epoch 3, Accuracy 0.82669997215271, Loss 0.5604792237281799\n",
+      "Epoch 4, Accuracy 0.8892999887466431, Loss 0.3604641556739807\n",
+      "Epoch 5, Accuracy 0.9243000149726868, Loss 0.25576335191726685\n",
+      "Epoch 6, Accuracy 0.9254999756813049, Loss 0.25008153915405273\n",
+      "Epoch 7, Accuracy 0.9253000020980835, Loss 0.24883303046226501\n",
+      "Epoch 8, Accuracy 0.9329000115394592, Loss 0.22752465307712555\n",
+      "Epoch 9, Accuracy 0.9375, Loss 0.2182329297065735\n"
      ]
     }
    ],
    "source": [
-    "trainModelWithValidation(_newSelfLearningModel, imageDataBunch, 8)"
+    "trainModelWithValidation(selfLearndingModel, imageDataBunch, 10)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 226,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "tensor(0.9338)"
+       "(tensor(0.9428), tensor(0.9375))"
       ]
      },
-     "execution_count": 84,
+     "execution_count": 226,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "accuracy(_newSelfLearningModel(xValidationNormalized), yValidation)"
+    "accuracy(cnnModel(xValidationNormalized), yValidation), accuracy(selfLearndingModel(xValidationNormalized), yValidation)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 116,
+   "execution_count": 227,
    "metadata": {},
    "outputs": [
     {
