--- a/nbs/dl2/05_ANNEAL_BEFORE_ZOD.ipynb
+++ b/nbs/dl2/05_ANNEAL_BEFORE_ZOD.ipynb
@@ -403,7 +403,7 @@
    "outputs": [],
    "source": [
     "#export\n",
-    "def createCosineScheduler(start, high, end):\n",
+    "def createCosineSchedulers(start, high, end):\n",
     "    return [cosineScheduler(start, high), cosineScheduler(high, end)]"
    ]
   },
