Working on getting the teacher back up to par

--- a/nbs/dl2/04_HOLLA_BACK_GURL.ipynb
+++ b/nbs/dl2/04_HOLLA_BACK_GURL.ipynb
@@ -122,14 +122,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 128,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
     "#export\n",
     "class DataBunch():\n",
-    "    def __init__(self, trainingDataLoader, validationDataLoader):\n",
+    "    def __init__(self, trainingDataLoader, validationDataLoader, numberOfClasses):\n",
     "        self.trainingDataLoader, self.validationDataLoader = trainingDataLoader, validationDataLoader\n",
+    "        self.numberOfClasses = numberOfClasses\n",
     "        \n",
     "    @property\n",
     "    def trainingDataSet(self): return self.trainingDataLoader\n",
@@ -467,7 +468,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 227,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -492,7 +493,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "pytorch_fastai",
    "language": "python",
    "name": "python3"
   },
