--- a/nbs/dl2/05_ANNEAL_BEFORE_ZOD.ipynb
+++ b/nbs/dl2/05_ANNEAL_BEFORE_ZOD.ipynb
@@ -176,7 +176,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -244,10 +244,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
+    "#export\n",
+    "\n",
     "@FixedRange\n",
     "def cosineScheduler(start, end, timePosition): return start + (1 + math.cos(math.pi*(1-timePosition))) * (end-start) / 2\n",
     "\n",
@@ -664,10 +666,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 156,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Converted 05_ANNEAL_BEFORE_ZOD.ipynb to exp/nb_05.py\r\n"
+     ]
+    }
+   ],
+   "source": [
+    "!python notebook2script.py 05_ANNEAL_BEFORE_ZOD.ipynb"
+   ]
   },
   {
    "cell_type": "code",
@@ -679,7 +691,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "pytorch_fastai",
    "language": "python",
    "name": "python3"
   },
