Back to ground zero

--- a/nbs/dl2/06_HOOKY.ipynb
+++ b/nbs/dl2/06_HOOKY.ipynb
@@ -181,6 +181,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#export\n",
     "def resizeImage(imageVector): return imageVector.view(-1, 1, 28, 28)"
    ]
   },
@@ -210,6 +211,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "\n",
     "def createConvolutionLayer(inputSize, \n",
     "                           outputSize, \n",
     "                           kernelSize=3, \n",
@@ -535,10 +537,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 15,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'Functional' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-15-3d02c4a9ad66>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;31m#export\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m \u001b[0;32mclass\u001b[0m \u001b[0mTeacherWithHooks\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      3\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m     def __init__(self, \n",
+      "\u001b[0;32m<ipython-input-15-3d02c4a9ad66>\u001b[0m in \u001b[0;36mTeacherWithHooks\u001b[0;34m()\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m     def __init__(self, \n\u001b[0;32m----> 6\u001b[0;31m                  \u001b[0mlossFunction\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mFunctional\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcross_entropy\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      7\u001b[0m                  \u001b[0maccuracyFunction\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0maccuracy\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      8\u001b[0m                  \u001b[0mschedulingFunctions\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mcosineScheduler\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m1e-1\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m1e-6\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mcosineScheduler\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m1e-1\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m1e-6\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'Functional' is not defined"
+     ]
+    }
+   ],
    "source": [
+    "#export\n",
     "class TeacherWithHooks():\n",
     "    \n",
     "    \n",
@@ -734,9 +750,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'torch' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-11-99439fc0de14>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;31m#export\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m \u001b[0;32mclass\u001b[0m \u001b[0mGeneralRectifiedLinearUnit\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtorch\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mnn\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mModule\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      3\u001b[0m     \u001b[0;32mdef\u001b[0m \u001b[0m__init__\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mleaky\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;32mNone\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0msubtractValue\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mmaxToClamp\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mmath\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0minf\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m         \u001b[0msuper\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m__init__\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m         \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mleaky\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msubtractValue\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mmaxToClamp\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mleaky\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0msubtractValue\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mmaxToClamp\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'torch' is not defined"
+     ]
+    }
+   ],
    "source": [
     "#export\n",
     "class GeneralRectifiedLinearUnit(torch.nn.Module):\n",
@@ -750,22 +778,22 @@
     "                if self.leaky is not None \\\n",
     "                else Functional.relu(inputVector)\n",
     "        if self.subtractValue > 0: rectifiedVector.sub_(self.subtractValue)\n",
-    "        if self.maxToClamp is not math.inf: rectifiedVector.clamp_max_(self.maxtToClamp)\n",
+    "        if self.maxToClamp is not math.inf: rectifiedVector.clamp_max_(self.maxToClamp)\n",
     "        return rectifiedVector\n",
     "        "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
     "#export\n",
     "layerSizes = [8, 16, 32, 32]\n",
     "\n",
-    "def createBetterConvolutionModel(numberOfClasses):\n",
-    "    return torch.nn.Sequential(*createBetterConvolutionLayers(numberOfClasses, layerSizes)).cuda()\n",
+    "def createBetterConvolutionModel(numberOfClasses, layerSizes):\n",
+    "    return torch.nn.Sequential(*createBetterConvolutionLayers(numberOfClasses, layerSizes))\n",
     "\n",
     "def createBetterConvolutionalLayer(inputSize, \n",
     "                                   outputSize, \n",
@@ -787,7 +815,7 @@
     "\n",
     "def createBetterConvolutionLayers(numberOfClasses, layerSizes):\n",
     "    adjustedLayerSizes = [1]  + layerSizes # Make the first layer take a dimension of one\n",
-    "    convolutionLayers = [createConvolutionLayer(adjustedLayerSizes[i], \n",
+    "    convolutionLayers = [createBetterConvolutionalLayer(adjustedLayerSizes[i], \n",
     "                                               adjustedLayerSizes[i+1],\n",
     "                                               5 if i == 0 else 3)\n",
     "                        for i in range(len(adjustedLayerSizes) - 1)]\n",
@@ -859,7 +887,7 @@
     }
    ],
    "source": [
-    "convolutionModelSR2 = createBetterConvolutionModel(numberOfClasses)\n",
+    "convolutionModelSR2 = createBetterConvolutionModel(numberOfClasses, layerSizes)\n",
     "convolutionModelSR2"
    ]
   },
@@ -921,7 +949,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 108,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -941,30 +969,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 109,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "application/javascript": [
-       "{\n",
-       "const ip = IPython.notebook\n",
-       "if (ip) {\n",
-       "    ip.save_notebook()\n",
-       "    console.log('a')\n",
-       "    const s = `!python notebook2script.py ${ip.notebook_name}`\n",
-       "    if (ip.kernel) { ip.kernel.execute(s) }\n",
-       "}\n",
-       "}"
-      ],
-      "text/plain": [
-       "<IPython.core.display.Javascript object>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "exportNotebook()"
    ]
@@ -979,7 +986,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "pytorch_fastai",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
