It aint easy being a normy

--- a/nbs/dl2/07_NORMIES.ipynb
+++ b/nbs/dl2/07_NORMIES.ipynb
@@ -225,7 +225,15 @@
     "\n",
     "$\\gamma$(gamma) and $\\beta$ (beta) shift normalization of the layer to our pleasing. Which allows us to move our loss in a direction that is smaller (closer to the expected value) $\\hat{x} = W\\hat{x} + \\vec{b}$ \n",
     "\n",
-    "$\\hat{x}$ is the activations. So we want to move the activations closest to y so $\\hat{y} = \\gamma\\hat{x} + \\beta$ <- we want that to be close to y ie $0 = y - \\hat{y}$\n"
+    "$\\hat{x}$ is the activations. So we want to move the activations closest to y so $\\hat{y} = \\gamma\\hat{x} + \\beta$ <- we want that to be close to y ie $0 = y - \\hat{y}$\n",
+    "\n",
+    "The big issue that this solves is that the gradients (things that help learning) of the loss function are dependent in a highly correlative manner. If the outputs of the previous layer is small (ie the activations) then the learning gradients of the current layer is small as well. Smaller gradients, less learning.  \n",
+    "\n",
+    "Batch normalization normally works best with batches that are >32\n",
+    "\n",
+    "$C$ = Channel\n",
+    "\n",
+    "A channel is a result of applying a **kernel** to the input. Many #channels === #kernels"
    ]
   },
   {
@@ -528,6 +536,273 @@
    ],
    "source": [
     "accuracy(convolutionModelSR2(xTrainingNormalized), yTraining), accuracy(convolutionModelSR2(xValidationNormalized), yValidation)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Layer Normalization\n",
+    "\n",
+    "The difference between Batch Normalization and Layer normalization is that the activations from the previous layer (in layer normalization) are normalized to the mean and variance of the activation of the previous layer, rather than the average of all of the layers like in batch normalization.\n",
+    "\n",
+    "The downside is that every input will look the same going in as it does going out. IE, all really high inputs will look the same as all really low inputs. Whether they are high or low does not matter, just as long as they have low variance, layer norm will make them all look the same. So we loose magnitiude, but gain the ability to have consistent activations throughout our network. So we would not be able to distinguish between hot and cold, as they would all be _normalized_ (ie the same)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 90,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class LayerNormalization(nn.Module):\n",
+    "    def __init__(self, layerSize, momentum=0.1, epsilon=1e-5):\n",
+    "        super().__init__()\n",
+    "        self.momentum, self.epsilon = momentum, epsilon\n",
+    "        self.gamma = nn.Parameter(torch.ones(layerSize, 1, 1)) # being a parameter allows it to be adjust in backprop\n",
+    "        self.beta = nn.Parameter(torch.zeros(layerSize, 1, 1)) # ie this is a part of the convolution model.\n",
+    "        \n",
+    "    def forward(self, activations):\n",
+    "        normalizedActivations = self._normalizeActivations(activations)\n",
+    "        return self.gamma * normalizedActivations + self.beta\n",
+    "    \n",
+    "    def _normalizeActivations(self, activations):\n",
+    "        batchMean, batchVariance = self._getMeanAndVariance(activations)\n",
+    "        return (activations - batchMean) / (batchVariance + self.epsilon).sqrt()\n",
+    "    \n",
+    "    def _getMeanAndVariance(self, activations):\n",
+    "        layerMeans = activations.mean((0,2,3), keepdim=True)\n",
+    "        layerVariances = activations.var((0, 2, 3), keepdim=True)\n",
+    "        return layerMeans, layerVariances"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Instance Normalization\n",
+    "\n",
+    "Instance normalization takes away any grouping. Layer normalization uses the entire layer's output mean/variance, batch normalization uses the entire dataset's mean/variance. Instance normalization just normalizes one "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Group Normalization\n",
+    "\n",
+    "Very similar to the Layer initialization, but we break the layer int mostly equally sized groups."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Model To Tensor**\n",
+    "\n",
+    "tensor.shape -> torch.Size([500, 8, 78, 78])\n",
+    "- 500 == Number of items to be processed (ie, batch)\n",
+    "- 8 == Number of channels (ie, how many kernel's processed the input\n",
+    "- 78 x78 == Shape of the input matrix."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Baby Batch Norm\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 135,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "torch.Size([5, 3, 4, 4])"
+      ]
+     },
+     "execution_count": 135,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "rando = torch.randn((5, 3, 4, 4))\n",
+    "rando.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 136,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(tensor([[[[11.5323]],\n",
+       " \n",
+       "          [[-7.3790]],\n",
+       " \n",
+       "          [[-4.9058]]]]), torch.Size([1, 3, 1, 1]), 3)"
+      ]
+     },
+     "execution_count": 136,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "summy = rando.sum((0, 2, 3), keepdim=True)\n",
+    "summy, summy.shape, summy.numel()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 139,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(80, 48)"
+      ]
+     },
+     "execution_count": 139,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "rando.numel() // rando.shape[1], rando[1].numel()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 143,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(torch.Size([1, 3, 4, 4]), 48)"
+      ]
+     },
+     "execution_count": 143,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "otherSummy = rando.sum(0, keepdim=True)\n",
+    "otherSummy.shape, otherSummy.numel()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### ☝️Adds up all the stuff into the channel dimension"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 131,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#export\n",
+    "class BabyBatchNormalizationLayer(nn.Module):\n",
+    "    def __init__(self, layerSize, momentum=0.1, epsilon=1e-5):\n",
+    "        super().__init__()\n",
+    "        self.momentum, self.epsilon, self.layerSize = momentum, epsilon, layerSize\n",
+    "        self.gamma = nn.Parameter(torch.ones(layerSize, 1, 1))\n",
+    "        self.beta = nn.Parameter(torch.zeros(layerSize, 1, 1))\n",
+    "        self.register_buffer(\"aggregatedGamma\", torch.zeros(1, layerSize, 1, 1))\n",
+    "        self.register_buffer(\"aggregatedBeta\", torch.zeros(1, layerSize, 1, 1))\n",
+    "        self.register_buffer(\"batch\", torch.tensor(0.))\n",
+    "        self.register_buffer(\"counts\", torch.tensor(0.))\n",
+    "        self.register_buffer(\"step\", torch.tensor(0.))\n",
+    "        self.register_buffer(\"bias\", torch.tensor(0.))\n",
+    "    \n",
+    "    def forward(self, activations):\n",
+    "        normalizedActivations = self._normalizeActivations(activations)\n",
+    "        return self.gamma * normalizedActivations + self.beta\n",
+    "    \n",
+    "    def _normalizeActivations(self, activations):\n",
+    "        batchMean, batchVariance = self._getMeanAndVariance(activations)\n",
+    "        return (activations - batchMean) / (batchVariance + self.epsilon).sqrt()\n",
+    "    \n",
+    "    def _getMeanAndVariance(self, activations):\n",
+    "        if self.training:\n",
+    "            with torch.no_grad():\n",
+    "                return self._updateStatistics(activations)\n",
+    "        else:\n",
+    "            return self.means, self.variances\n",
+    "\n",
+    "    def _updateStatistics(self, activations):\n",
+    "        self.aggregatedGamma.detatch_()\n",
+    "        self.aggregatedBeta.detatch_()\n",
+    "        batchSize, numberOfChannels, *_ = activations.shape\n",
+    "        channelSum = activations.sum((0,2,3), keepdim=True)\n",
+    "        channelSquared = (activations * activations).sum((0, 2, 3), keepdim=True)\n",
+    "        \n",
+    "        momentum = (1 - (1-self.momentum)/math.sqrt(self.batchSize-1))\n",
+    "        \n",
+    "        counts = channelSum.new_tensor()\n",
+    "        \n",
+    "        self.means.lerp_(batchMeans, self.momentum) # we only want to step a little bit away from\n",
+    "        self.variances.lerp_(batchVariances, self.momentum) # the stored means eg momentum is tiny\n",
+    "        return batchMeans, batchVariances"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 99,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def createBabyBatchNormalizedConvolutionLayer(inputSize, \n",
+    "                                   outputSize, \n",
+    "                                   kernelSize=3, \n",
+    "                                   stride=2,\n",
+    "                                   leaky=0.1,\n",
+    "                                   subtractValue=0.4,\n",
+    "                                   maxToClamp=6.0\n",
+    "                                  ):\n",
+    "    layers = [\n",
+    "        torch.nn.Conv2d(inputSize, \n",
+    "                           outputSize, \n",
+    "                           kernelSize, \n",
+    "                           stride, \n",
+    "                           kernelSize//2), \n",
+    "       GeneralRectifiedLinearUnit(leaky, \n",
+    "                                  subtractValue, \n",
+    "                                  maxToClamp),\n",
+    "        BabyBatchNormalizationLayer(outputSize)\n",
+    "    ]\n",
+    "    return torch.nn.Sequential(*layers)\n",
+    "\n",
+    "def createBabyBatchNormalizedConvolutionLayers(numberOfClasses, layerSizes):\n",
+    "    adjustedLayerSizes = [1]  + layerSizes # Make the first layer take a dimension of one\n",
+    "    convolutionLayers = [createBatchNormalizedConvolutionLayer(adjustedLayerSizes[i], \n",
+    "                                               adjustedLayerSizes[i+1],\n",
+    "                                               5 if i == 0 else 3)\n",
+    "                        for i in range(len(adjustedLayerSizes) - 1)]\n",
+    "    finishingLayers = [\n",
+    "        torch.nn.AdaptiveAvgPool2d(1),\n",
+    "        LambdaLayer(flattenImage),\n",
+    "        torch.nn.Linear(layerSizes[-1], numberOfClasses)\n",
+    "    ]\n",
+    "    return [LambdaLayer(resizeImage)] + convolutionLayers + finishingLayers\n",
+    "\n",
+    "\n",
+    "def createBabyBatchNormalizedConvolutionModel(numberOfClasses, layerSizes):\n",
+    "    newModel = torch.nn.Sequential(*createBatchNormalizedConvolutionLayers(numberOfClasses, layerSizes))\n",
+    "    kaimingInitializeLayers(newModel)\n",
+    "    return newModel"
    ]
   },
   {
